--- a/aula-reactive-forms/src/app/features/sell/pages/create-products/create-products-page.component.html
+++ b/aula-reactive-forms/src/app/features/sell/pages/create-products/create-products-page.component.html
@@ -1,30 +1,27 @@
 <app-header></app-header>
 <div class="register-container">
     <h3>Cadastro de Produtos</h3>
-    <form class="register-form">
+    <form class="register-form" [formGroup]="formProduto">
         <div class="form-field">
             <label class="label-input">Descrição do produto:</label>
-            <input type="text" placeholder="Digite a descrição">
+            <input type="text" formControlName="descricao" placeholder="Digite a descrição">
         </div>
         <div class="form-field">
             <label class="label-input">Quantidade:</label>
-            <input type="number" placeholder="Digite a quantidade do produto">
+            <input type="number" formControlName="quantidade" placeholder="Digite a quantidade do produto">
         </div>
         <div class="form-field">
             <label class="label-input">Valor do produto:</label>
-            <input type="number" placeholder="Digite o valor do produto">
+            <input type="number" formControlName="valorProduto" placeholder="Digite o valor do produto">
             <span class="error">
-            O valor da do produto deve estar entre 100 e 1500*</span>
+                O valor da do produto deve estar entre 100 e 1500*</span>
         </div>
         <div class="form-field">
             <label class="label-input">Imagem do produto:</label>
-            <input type="text" placeholder="Digite a url">
+            <input type="text" formControlName="imagemProduto" placeholder="Digite a url">
         </div>
         <div class="action-form">
-            <button
-            class="cadastrarProduto"
-            type="submit"
-            (click)="onSubmit()">Salvar</button>
+            <button class="cadastrarProduto" type="submit" (click)="onSubmit()">Salvar</button>
         </div>
     </form>
 </div>
